--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ wandb
 finetune/SmilingWolfwd-swinv2-tagger-v3/model.msgpack
 finetune/SmilingWolfwd-swinv2-tagger-v3/model.onnx
 finetune/SmilingWolfwd-swinv2-tagger-v3/model.safetensors
+openai
+checkpoint/stable-diffusion-v1-5.safetensors
+lyqface_r
