--- a/config_lora.toml
+++ b/config_lora.toml
@@ -22,5 +22,5 @@ enable_bucket = true
 num_repeats = 2
 
   [[datasets.subsets]]
-  image_dir = '/home/user/lyq/sd-scripts-main/lyq_dataset/lyq_mask'         # 指定包含训练图像的文件夹
-  metadata_file = '/home/user/lyq/sd-scripts-main/finetune/lyq_finetune/meta_cap_dd_dataset3.json'     # 元数据文件名
+  image_dir = './lyq_dataset/lyq_mask'         # 指定包含训练图像的文件夹
+  metadata_file = './lyq_dataset/yuanshuju/meta_cap_dd.json'     # 元数据文件名
